--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space//country/ukraine/style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Украина</title>
+    <title>Государственное устройство Украины</title>
 
 </head>
 
@@ -35,43 +35,8 @@
     </header>
     <main>
         <div class="container">
-            <h1>Украи́на</h1>
-            <hr>
 
-
-            <p>
-                Украи́на — государство в Восточной и частично Центральной Европе. Население,
-                по итогам переписи 2001 года, составляло 48 240 902 постоянных жителя и 48 457 102 человека
-                наличного населения, по оценкам государственной службы статистики Украины на 1 сентября 2020 года —
-                41 554 361 постоянных жителя и 41 723 998 человек наличного населения. Территория в пределах
-                международно-признанных грани — 603 549 км². Занимает 38-е место в мире по численности
-                населения, 44-е по территории. Украина является первым по
-                размеру территории европейским государством, целиком находящимся в Европе.
-            </p>
-            <p>
-                Столица — Киев. Государственный язык — украинский.
-            </p>
-            <p>
-                Украина — унитарное государство и парламентско-президентская республика. Должность президента с 20 мая
-                2019 года занимает Владимир Зеленский, премьер-министра с 4 марта 2020 года — Денис Шмыгаль.
-            </p>
-            <p>
-                Объём ВВП за 2019 год, рассчитанный по паритету покупательной способности (ППС) составил 560 млрд
-                долларов (13442 на душу населения). Номинальный ВВП в том же году составил 154,69 млрд долларов (3706 на
-                душу населения), занимая по показателю ВВП на душу населения (номинальному и по ППС) предпоследнее место
-                в Европе. Денежная единица — гривна (UAH).
-            </p>
-            <p>
-                Независимость страны от СССР, союзной республикой которого Украина была с декабря 1922 года,
-                провозглашена 24 августа 1991 года. Продолжательница государственно-национальных традиций и
-                правопреемница УНР, государство-продолжатель УССР, соправопреемница СССР по международным
-                договорам, соучредитель ООН, СНГ, ГУАМ, ОЧЭС
-                и других международных организаций, находится в ассоциации с Европейским союзом. Согласно действующим
-                международным договорам и конвенциям, имеет упрощённый доступ к Черноморским проливам, осуществляет
-                научно-исследовательскую деятельность в Антарктиде и миротворческую деятельность в ДР Конго, Косово,
-                Южном Судане, районе Абьей, Афганистане, Приднестровье и на Кипре.
-            </p>
-            <h2>Государственное устройство</h2>
+            <h1>Государственное устройство</h1>
             <hr>
             <p>
                 Государственный строй Украины определён Конституцией, принятой парламентом 28 июня 1996 года.
@@ -93,19 +58,19 @@
                 украинского языка определены Законом от 25 апреля 2019 года № 2704-VIII «Об обеспечении функционирования
                 украинского языка как государственного».
             </p>
-            <h3>Государственная власть</h3>
+            <h2>Государственная власть</h2>
             <p>
                 Статья 6 Конституции Украины устанавливает, что государственная власть на Украине осуществляется по
                 принципу её разделения на законодательную, исполнительную и судебную. Органы законодательной,
                 исполнительной и судебной власти осуществляют свои полномочия в установленных настоящей Конституцией
                 пределах и в соответствии с законами Украины.
             </p>
-            <h4>Исполнительная власть</h4>
+            <h3>Исполнительная власть</h3>
             <p>
                 Исполнительную власть на Украине осуществляют президент Украины и Кабинет министров Украины —
                 правительство.
             </p>
-            <h5>Президент Украины</h5>
+            <h4>Президент Украины</h4>
             <p>
                 Главой украинского государства, согласно статье 102 Конституции Украины, является президент Украины.
 
@@ -113,6 +78,104 @@
                 соблюдения Конституции Украины, прав и свобод человека и гражданина. В установленном конституцией
                 порядке он обеспечивает государственную независимость и безопасность государства. В соответствии с
                 Конституцией Украины президент осуществляет руководство внешнеполитической деятельностью государства.
+            </p>
+            <h5>Список пезидентов Украины</h5>
+            <table border="1" rules="all" class="table text-info table-bordered">
+                <thead class="table-primary">
+                    <tr>
+                        <th scope="col">№ </th>
+                        <th scope="col">Срок</th>
+                        <th scope="col">Фото</th>
+                        <th scope="col">Фамилия Имя Отчество</th>
+                        <th scope="col" colspan="2">Срок полномочий</th>
+                    </tr>
+                </thead>
+                <tbody class="ussr">
+                    <tr>
+                        <th scope="row" style="background: #7f7fff;">1</th>
+                        <td>1</td>
+                        <td></td>
+                        <td>Леонид Макарович Кравчук</td>
+                        <td>5 декабря 1991</td>
+                        <td>19 июля 1994</td>
+        
+                    </tr>
+                    <tr>
+                        <th scope="row" rowspan="2" style="background: #7f7fff;">2</th>
+                        <td>1</td>
+                        <td rowspan="2"></td>
+                        <td rowspan="2">Леонид Данилович Кучма</td>
+                        <td>19 июля 1994</td>
+                        <td>14 ноября 1999</td>
+        
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>14 ноября 1999</td>
+                        <td>23 января 2005</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" style="background: orange;">3</th>
+                        <td>1</td>
+                        <td></td>
+                        <td>Виктор Андреевич Ющенко</td>
+                        <td>23 января 2005</td>
+                        <td>25 февраля 2010</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" style="background: blue;">4</th>
+                        <td>1</td>
+                        <td></td>
+                        <td>Виктор Фёдорович Янукович</td>
+                        <td>25 февраля 2010</td>
+                        <td>22 февраля 2014</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" style="background: pink;">-</th>
+                        <td>-</td>
+                        <td></td>
+                        <td>Александр Валентинович Турчинов <br> (исполняющий обязанности)</td>
+                        <td>23 февраля 2014</td>
+                        <td>7 июня 2014</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" style="background: #7f7fff;">5</th>
+                        <td>1</td>
+                        <td></td>
+                        <td>Петр Алексеевич Порошенко</td>
+                        <td>7 июня 2014</td>
+                        <td>20 мая 2019</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" style="background: #7f7fff;">6</th>
+                        <td>1</td>
+                        <td></td>
+                        <td>Владимир Александрович Зеленский</td>
+                        <td>20 мая 2019</td>
+                        <td>в должности</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h4>Кабинет министров Украины</h4>
+            <p>
+                Кабинет министров Украины является правительством Украины и, согласно статье 113 Конституции Украины,
+                высшим органом в системе органов исполнительной власти государства.
+            </p>
+            <p>
+                Премьер-министр Украины назначается Верховной Радой Украины по представлению президента Украины. В свою
+                очередь, представление президента Украины основывается на предложении коалиции депутатских фракций в
+                Верховной Раде Украины, сформированной в соответствии со статьей 83 Конституции Украины, или депутатской
+                фракции, в состав которой входит большинство народных депутатов Украины от конституционного состава
+                Верховной Рады Украины.
+            </p>
+            <p>
+                Согласно статье 116 Конституции Украины, Кабинет министров обеспечивает государственный суверенитет и
+                экономическую самостоятельность Украины, осуществление внутренней и внешней политики государства,
+                исполнение Конституции и законов Украины, актов Президента Украины.
+            </p>
+            <h4>Законодательная власть</h4>
+            <p>
+                Единственным органом законодательной власти на Украине является Верховная Рада Украины.
             </p>
         </div>
 
