--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -27,6 +27,7 @@
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-system" >Государственное устройство</a>
             <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
