--- a/putin/index.html
+++ b/putin/index.html
@@ -76,6 +76,7 @@
             </tr>
         </tbody>
     </table>
+    <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-share-url="https://t.me/zaharsovet"></script>
 </body>
 
 </html>
