--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -27,8 +27,8 @@
         </div>
         <div id="nav-country">
 
-            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/gos-system">Государственное устройство</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" >Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-system" id="id">Государственное устройство</a>
 
             <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная символика</a>
         </div>
@@ -94,7 +94,7 @@
                     <tr>
                         <th scope="row" style="background: #7f7fff;">1</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="99px-Leonid_Kravchuk.jpg" alt=""></td>
                         <td>Леонид Макарович Кравчук</td>
                         <td>5 декабря 1991</td>
                         <td>19 июля 1994</td>
@@ -103,7 +103,8 @@
                     <tr>
                         <th scope="row" rowspan="2" style="background: #7f7fff;">2</th>
                         <td>1</td>
-                        <td rowspan="2"></td>
+                        <td rowspan="2"><img src="100px-Leonid_Kuchma.jpg" alt=""></td>
+                        
                         <td rowspan="2">Леонид Данилович Кучма</td>
                         <td>19 июля 1994</td>
                         <td>14 ноября 1999</td>
@@ -117,7 +118,7 @@
                     <tr>
                         <th scope="row" style="background: orange;">3</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="100px-Wiktor_Juschtschenko,_Präsident_der_Ukraine,_in_der_Universität_Zürich.jpg" alt=""></td>
                         <td>Виктор Андреевич Ющенко</td>
                         <td>23 января 2005</td>
                         <td>25 февраля 2010</td>
@@ -125,7 +126,7 @@
                     <tr>
                         <th scope="row" style="background: blue;">4</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="100px-Viktor_Yanukovych_2007-01-15.jpg" alt=""></td>
                         <td>Виктор Фёдорович Янукович</td>
                         <td>25 февраля 2010</td>
                         <td>22 февраля 2014</td>
@@ -133,7 +134,7 @@
                     <tr>
                         <th scope="row" style="background: pink;">-</th>
                         <td>-</td>
-                        <td></td>
+                        <td><img src="100px-Turchynov_March_2014_(cropped).jpg" alt=""></td>
                         <td>Александр Валентинович Турчинов <br> (исполняющий обязанности)</td>
                         <td>23 февраля 2014</td>
                         <td>7 июня 2014</td>
@@ -141,7 +142,7 @@
                     <tr>
                         <th scope="row" style="background: #7f7fff;">5</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="100px-Official_portrait_of_Petro_Poroshenko.jpg" alt=""></td>
                         <td>Петр Алексеевич Порошенко</td>
                         <td>7 июня 2014</td>
                         <td>20 мая 2019</td>
@@ -149,7 +150,7 @@
                     <tr>
                         <th scope="row" style="background: #7f7fff;">6</th>
                         <td>1</td>
-                        <td></td>
+                        <td><img src="100px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt=""></td>
                         <td>Владимир Александрович Зеленский</td>
                         <td>20 мая 2019</td>
                         <td>в должности</td>
