--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -71,48 +71,16 @@
                 научно-исследовательскую деятельность в Антарктиде и миротворческую деятельность в ДР Конго, Косово,
                 Южном Судане, районе Абьей, Афганистане, Приднестровье и на Кипре.
             </p>
-            <h2>Государственное устройство</h2>
+            <h2>Границы</h2>
             <hr>
             <p>
-                Государственный строй Украины определён Конституцией, принятой парламентом 28 июня 1996 года.
-            </p>
-            <p>
-                Украина представляет собой унитарную парламентско-президентскую республику. Правительство — Кабинет
-                министров Украины. Высший законодательный орган — Верховная рада Украины.
-            </p>
-            <p>
-                Сразу после провозглашения независимости Украины, благодаря референдуму 1991 года, на Украине была
-                образована парламентская комиссия по подготовке новой конституции. 28 июня 1996 года, с принятием новой
-                демократической конституции, была основана многопартийная политическая система (плюрализм) и
-                декларированы основные права и свободы граждан Украины, а также национальных меньшинств страны.
-            </p>
-            <p>
-                Согласно Конституции, государственным языком на Украине является украинский язык. Этническим группам
-                населения Украины гарантируется право на получение образования на родном языке, на развитие культуры, а
-                также на поддержку и использование национальных языков в повседневной жизни. Сфера и масштабы применения
-                украинского языка определены Законом от 25 апреля 2019 года № 2704-VIII «Об обеспечении функционирования
-                украинского языка как государственного».
-            </p>
-            <h3>Государственная власть</h3>
-            <p>
-                Статья 6 Конституции Украины устанавливает, что государственная власть на Украине осуществляется по
-                принципу её разделения на законодательную, исполнительную и судебную. Органы законодательной,
-                исполнительной и судебной власти осуществляют свои полномочия в установленных настоящей Конституцией
-                пределах и в соответствии с законами Украины.
-            </p>
-            <h4>Исполнительная власть</h4>
-            <p>
-                Исполнительную власть на Украине осуществляют президент Украины и Кабинет министров Украины —
-                правительство.
-            </p>
-            <h5>Президент Украины</h5>
-            <p>
-                Главой украинского государства, согласно статье 102 Конституции Украины, является президент Украины.
-
-                Президент Украины является гарантом государственного суверенитета, территориальной целостности Украины,
-                соблюдения Конституции Украины, прав и свобод человека и гражданина. В установленном конституцией
-                порядке он обеспечивает государственную независимость и безопасность государства. В соответствии с
-                Конституцией Украины президент осуществляет руководство внешнеполитической деятельностью государства.
+                Украина имеет официальную границу с 7 государствами — членами ООН: на востоке, северо-востоке и де-факто
+                на юге с Россией (1955 км по суше, морские границы в Азовском и Чёрном морях не урегулированы), на
+                севере с Белоруссией (1084 км), на западе с Польшей (542 км), Словакией (98 км), Венгрией (135 км), на
+                юго-западе с Молдавией (1202 км, из них 405 км контролируются непризнанной Приднестровской Молдавской
+                Республикой) и Румынией (608 км по суше, морские границы урегулированы). Протяжённость береговой линии —
+                2835 км. Длина морской границы составляет 1355 км[20] (по Чёрному морю — 1056,5 км; по Азовскому морю —
+                249,5 км.
             </p>
         </div>
 
