--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -162,19 +162,33 @@
                         <th scope="col"> Имя Отчество Фамилия (Год жизни)</th>
                         <th scope="col" colspan="2">Срок полномочий</th>
                         <th scope="col">Срок в годах и месяцах</th>
+                        <th scope="col">Действующие Председатели Правительства</th>
                     </tr>
                 </thead>
                 <tbody class="ussr">
                     <tr>
-                        <th scope="row" rowspan="2">1</th>
+                        <th scope="row" rowspan="2" style="background: red;">1</th>
                         <td>1</td>
                         <td rowspan="2">
                             <img src="Boris.jpg" alt="">
                         </td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис Николаевич Ельцин</a> <br> (1931—2007)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис
+                                Николаевич Ельцин</a> <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
                         <td>4 года 7 месяцев 9 дней</td>
+                        <td rowspan="2">
+                            <p>И. С. Силаев</p>
+                            <p>О. И. Лобов</p>
+                            <p>Б. Н. Ельцин</p>
+                            <p>Е. Т. Гайдар</p>
+                            <p>В. С. Черномырдин</p>
+                            <p>С. В. Кириенко</p>
+                            <p>В. С. Черномырдин</p>
+                            <p>Е. М. Примаков</p>
+                            <p>С. В. Степашин</p>
+                            <p>В. В. Путин</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -183,13 +197,20 @@
                         <td>3 года 4 месяца 22 дня</td>
                     </tr>
                     <tr>
-                        <th scope="row" rowspan="2">2</th>
+                        <th scope="row" rowspan="2" style="background: red;">2</th>
                         <td>1</td>
                         <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир Владимирович Путин</a> <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
                         <td>4 года</td>
+                        <td rowspan="2">
+                            <p>М. М. Касьянов</p>
+                            <p>В. Б. Христенко</p>
+                            <p>М. Е. Фрадков</p>
+                            <p>В. А. Зубков</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -198,31 +219,48 @@
                         <td>4 года</td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
+                        <th scope="row" style="background: blue;">3</th>
                         <td>1</td>
                         <td><img src="Dmitry_Anatolyevich_Medvedev.jpg" alt=""></td>
-                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий Анатольевич Медведев</a> <br> (р. 1965)</td>
+                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий Анатольевич
+                                Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
                         <td>4 года</td>
+                        <td>
+                            <p>В. В. Путин</p>
+                        </td>
                     </tr>
                     <tr>
-                        <th scope="row" rowspan="2">4</th>
+                        <th scope="row" style="background: blue;">4</th>
                         <td>3</td>
                         <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt=""></td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир Владимирович Путин</a> <br> (р. 1952)</td>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
                         <td>6 лет</td>
+                        <td rowspan="2">
+                            <p>В. А. Зубков</p>
+                            <p>Д. А. Медведев</p>
+                            <p>М. В. Мишустин</p>
+                            <p>А. Р. Белоусов</p>
+                            <p>М. В. Мишустин</p>
+                        </td>
                     </tr>
                     <tr>
-                        <td>4</td>
+                        <td style="background: red;">4</td>
+                        <td>4
+                        </td>
                         <td>7 мая 2018</td>
                         <td>срок истекает 7 мая 2024</td>
                         <td>6 лет</td>
                     </tr>
                 </tbody>
             </table>
+            <div id="bpart"></div> -  беспартийный
+            <br>
+            <div id="part"></div>  - Единная Россия
         </div>
     </main>
     <footer>
