--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -258,9 +258,9 @@
                     </tr>
                 </tbody>
             </table>
-            <div id="bpart"></div> -  беспартийный
+            <p><div id="bpart"></div> -  беспартийный</p>
             <br>
-            <div id="part"></div>  - Единная Россия
+            <p><div id="part"></div>  - Единная Россия</p>
         </div>
     </main>
     <footer>
