--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -153,7 +153,7 @@
                 заключений Верховного и Конституционного судов.
             </p>
             <h4>Список президентов РФ</h4>
-            <table border="1" rules="all" class="table text-info table-bordered">
+            <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
@@ -197,6 +197,25 @@
                         <td>3 года 4 месяца 22 дня</td>
                     </tr>
                     <tr>
+                        <th scope="row" style="background: red;">2</th>
+                        <td>1</td>
+                        <td><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
+                        <td>
+                            <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                Владимирович Путин</a> <br> (исполняющий обязанности)
+                        </td>
+                        <td>31 декабря 1999</td>
+                        <td>7 мая 2000</td>
+                        <td>4 месяцев, 1 неделя</td>
+                        <td rowspan="3">
+                            <p>М. М. Касьянов</p>
+                            <p>В. Б. Христенко</p>
+                            <p>М. Е. Фрадков</p>
+                            <p>В. А. Зубков</p>
+                        </td>
+
+                    </tr>
+                    <tr>
                         <th scope="row" rowspan="2" style="background: red;">2</th>
                         <td>1</td>
                         <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
@@ -205,12 +224,7 @@
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
                         <td>4 года</td>
-                        <td rowspan="2">
-                            <p>М. М. Касьянов</p>
-                            <p>В. Б. Христенко</p>
-                            <p>М. Е. Фрадков</p>
-                            <p>В. А. Зубков</p>
-                        </td>
+                        
                     </tr>
                     <tr>
                         <td>2</td>
@@ -258,9 +272,11 @@
                     </tr>
                 </tbody>
             </table>
-            <p><div id="bpart"></div> -  беспартийный</p>
+            <p>
+            <div id="bpart"></div> - беспартийный</p>
             <br>
-            <p><div id="part"></div>  - Единная Россия</p>
+            <p>
+            <div id="part"></div> - Единная Россия</p>
         </div>
     </main>
     <footer>
