--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -80,7 +80,7 @@
                 Конституцией Украины президент осуществляет руководство внешнеполитической деятельностью государства.
             </p>
             <h5>Список пезидентов Украины</h5>
-            <table border="1" rules="all" class="table text-info table-bordered">
+            <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
