--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -197,8 +197,8 @@
                         <td>3 года 4 месяца 22 дня</td>
                     </tr>
                     <tr>
-                        <th scope="row" style="background: red;">2</th>
-                        <td>1</td>
+                        <th scope="row" style="background: red;">-</th>
+                        <td>-</td>
                         <td><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
                         <td>
                             <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
