--- a/country/index.html
+++ b/country/index.html
@@ -66,7 +66,7 @@
                         <td>СССР</td>
                         <td><img src="/political-na-postsovet-space/gerb-of-USSR.png" alt=""></td>
                         <td><img src="/political-na-postsovet-space/flag-of-USSR.png" alt=""></td>
-                        <td>Москва</td>
+                        <td rowspan="2">Москва</td>
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
@@ -80,7 +80,7 @@
                                 alt=""></td>
                         <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
                                 alt=""></td>
-                        <td>Москва</td>
+            
                         <td>12 декабря 1991</td>
                         <td>17 125 191</td>
                         <td>146 781 095</td>
