--- a/country/index.html
+++ b/country/index.html
@@ -126,7 +126,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Vladimir.jpg" class="d-block w-100" alt="...">
+                        <img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" class="d-block w-100" alt="..."  ">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Владимир Владимирович Путин</h5>
                             <p>Президент Российской Федерации</p>
