--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -202,7 +202,7 @@
                         <td><img src="Vladimir_Vladimirovich_Putin.jpg" alt=""></td>
                         <td>
                             <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
-                                Владимирович Путин</a> <br> (исполняющий обязанности)
+                                Владимирович Путин</a> <br> <small>(исполняющий обязанности)</small>
                         </td>
                         <td>31 декабря 1999</td>
                         <td>7 мая 2000</td>
