--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -172,7 +172,7 @@
         <h3>Гимн России инструментал</h3>
         <audio controls loop>
             <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                type="audio/mpeg">
+                type="audio/mpeg" style="width: 100%;">
             Тег audio не поддерживается вашим браузером.
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
                 музыку</a>.
