--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="container">
-            <h1>Россия</h1>
+            <h1 id="russia">Россия</h1>
             <hr>
             <p>
                 Росси́я, другое официальное название — Росси́йская Федера́ция (РФ), — государство в Восточной
@@ -152,7 +152,7 @@
                 обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
                 заключений Верховного и Конституционного судов.
             </p>
-            <h4>Список президентов РФ</h4>
+            <h4 id="president">Список президентов РФ</h4>
             <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
