--- a/country/index.html
+++ b/country/index.html
@@ -75,7 +75,7 @@
 
                     </tr>
                     <tr>
-                        <td>Российская Федерация</td>
+                        <td><a href="/political-na-postsovet-space/country/russia/">Российская Федерация</td>
                         <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
                                 alt=""></td>
                         <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
@@ -89,7 +89,7 @@
 
                     </tr>
                     <tr>
-                        <td>Украина</td>
+                        <td><a href="/political-na-postsovet-space/country/ukraine/"> Украина</a></td>
                         <td><img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""></td>
                         <td><img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
@@ -101,7 +101,7 @@
 
                     </tr>
                     <tr>
-                        <td>Беларусь</td>
+                        <td><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></td>
                         <td><img src="/political-na-postsovet-space/country/belarus/gerb-of-Belarus.png" alt=""></td>
                         <td><img src="/political-na-postsovet-space/country/belarus/flag-of-Belarus.png" alt=""></td>
                         <td>Минск</td>
