--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -120,7 +120,7 @@
                 административно-территориальными единицами в составе субъекта федерации являются районы и города
                 областного (республиканского, краевого, окружного) значения.</p>
 
-            <h3>Президент</h3>
+            <h3 id="president">Президент</h3>
             <p>
                 Главой государства является Президент Российской Федерации, в настоящее время — Владимир Владимирович
                 Путин. В исполнении обязанностей главы государства Президенту оказывает содействие председатель
@@ -152,7 +152,7 @@
                 обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
                 заключений Верховного и Конституционного судов.
             </p>
-            <h4 id="president">Список президентов РФ</h4>
+            <h4>Список президентов РФ</h4>
             <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
