--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
+        <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/">Страны</a>
     </header>
     <main>
