--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <a href="/political-na-postsovet-space"><button>Постсоветское пространоство</button></a>
+        <br>
+
+        <a href="/political-na-postsovet-space/news"><button>последние новости</button></a>
+<br>
+        <a href="/political-na-postsovet-space/country/"><button>Страны</button></a>
     </header>
     <main>
-  <a href="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" download>Скачать</a>
-    </main>
-    <footer></footer>
+  <a href="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" download><button>Скачать</button></a>
+  <br>
+  <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3" download><button>Скачать</button></a>
+    <footer>&copy; 2020-2021</footer>
 </body>
 </html>
