--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <a href="/political-na-postsovet-space"><button>Постсоветское пространоство</button></a>
         <br>
 
         <a href="/political-na-postsovet-space/news"><button>последние новости</button></a>
-<br>
+        <br>
         <a href="/political-na-postsovet-space/country/"><button>Страны</button></a>
+
+        <br>
+        <a href="/political-na-postsovet-space/country/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать Фото Путина</button></a>
     </header>
     <main>
-  <a href="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" download><button>Скачать</button></a>
-  <br>
-  <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3" download><button>Скачать</button></a>
-    <footer>&copy; 2020-2021</footer>
+        <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
+            poster="/political-na-postsovet-space/FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg" style="width: 100%;"></video>
+        <a href="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4"
+            download><button>Скачать</button></a>
+        <br>
+        <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+            download><button>Скачать Гимн России</button></a>
+        <footer>
+            &copy; 2020-2021
+            <br>
+            <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
+
+        </footer>
 </body>
+
 </html>
