--- a/putin/index.html
+++ b/putin/index.html
@@ -75,6 +75,7 @@
                 <td>6 лет</td>
             </tr>
         </tbody>
+        <a href="m">Перейти</a>
     </table>
     <iframe width="560" height="315" src="https://frontend.vh.yandex.ru/player/vnOcwpFALeSY?from=partner&mute=1&autoplay=1&branding=0" allow="autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
