--- a/country/index.html
+++ b/country/index.html
@@ -76,10 +76,10 @@
 
                     </tr>
                     <tr>
-                        <td><a href="/political-na-postsovet-space/country/russia/">Российская Федерация</td>
-                        <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                        <td><a href="russia/">Российская Федерация</td>
+                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png"
                                 alt=""></td>
-                        <td><img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                        <td><img src="russia/gos-simvolika/flag-of-Russia.png"
                                 alt=""></td>
 
                         <td>12 декабря 1991</td>
