--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <a href="news">Последние новости</a>
+        <a href="country/">Страны</a>
     </header>
     <main>
         <div class="container">
