--- a/country/index.html
+++ b/country/index.html
@@ -19,13 +19,11 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
-            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
-            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+            <a href="belarus/">Беларусь</a>
+            <a href="russia/">Российская Федерация</a>
+            <a href="ukraine/">Украина</a>
+            <a href="dni/">ДНР</a>
+            <a href="lnr/">ЛНР</a>
         </div>
     </header>
     <main>
@@ -90,9 +88,9 @@
 
                     </tr>
                     <tr>
-                        <td><a href="/political-na-postsovet-space/country/ukraine/"> Украина</a></td>
-                        <td><img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""></td>
-                        <td><img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""></td>
+                        <td><a href="ukraine/"> Украина</a></td>
+                        <td><img src="ukraine/gerb-of-ukraine.png" alt=""></td>
+                        <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
                         <td>24 августа 1991</td>
                         <td>603 549</td>
@@ -102,9 +100,9 @@
 
                     </tr>
                     <tr>
-                        <td><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></td>
-                        <td><img src="/political-na-postsovet-space/country/belarus/gerb-of-Belarus.png" alt=""></td>
-                        <td><img src="/political-na-postsovet-space/country/belarus/flag-of-Belarus.png" alt=""></td>
+                        <td><a href="belarus/">Беларусь</a></td>
+                        <td><img src="belarus/gerb-of-Belarus.png" alt=""></td>
+                        <td><img src="belarus/flag-of-Belarus.png" alt=""></td>
                         <td>Минск</td>
                         <td>25 августа 1991</td>
                         <td>207 600</td>
