--- a/country/index.html
+++ b/country/index.html
@@ -111,6 +111,17 @@
                         <td>2018</td>
 
                     </tr>
+                    <tr>
+                        <td><a href="lnr">ЛНР</a></td>
+                        <td><img src="lnr/gos-simvolika/gerb-of-Lnr.png" width="100px"></td>
+                        <td><img src="lnr/gos-simvolika/flag-of-Lnr.png" width="100px"></td>
+                        <td>Луганск</td>
+                        <td>12 мая 2014 (от Украины)</td>
+                        <td>8377</td>
+                        <td>1450000</td>
+                        <td>173,09</td>
+                        <td>2020</td>
+                    </tr>
 
                 </tbody>
             </table>
