--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/" id="id">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
+            <a href="gos-simvolika/">Государственная символика</a>
         </div>
     </header>
     <main>
