--- a/country/lnr/index.html
+++ b/country/lnr/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="gos-simvolika/gerb-of-Lnr.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>ЛНР</title>
+    <title>Луганская Народная Республика</title>
 
 </head>
 
@@ -25,9 +25,15 @@
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/" id="id">ЛНР</a>
         </div>
+        <div id="nav-country">
+            <a href="/political-na-postsovet-space/country/lnr/" id="id">Основная информация</a>
+            <a href="gos-simvolika">Государственная символика</a>
+        </div>
     </header>
     <main>
         <div class="container">
+            <h1>Луганская Народная Республика</h1>
+            <hr>
             <p>
                 <b>Луга́нская Наро́дная Респу́блика</b> (сокр. <b>ЛНР</b>) — непризнанное государственное образование в
                 восточной Европе. Наряду с ДНР, является одной из непризнанных политий на территории Донбасса
@@ -42,6 +48,81 @@
                 создании Новороссии (через год союз был заморожен ради реализации Минских соглашений). 11 июня 2014
                 года ЛНР обратилась к Российской Федерации, а также к 14 другим государствам, с просьбой о признании её
                 независимости.
+            </p>
+            <p>
+                К настоящему моменту независимость Луганской Народной Республики признана частично признанным
+                государством Южная Осетия.
+            </p>
+            <p>
+                Согласно Конституции Украины, территория, на которую претендует ЛНР, является неотъемлемой частью
+                Украины. Бо́льшая часть заявленной территории ЛНР контролируется украинскими властями; остальная часть
+                территории ЛНР, неподконтрольная украинским властям, согласно закону <i>„Об обеспечении прав и свобод
+                    граждан и правовом режиме на временно
+                    оккупированной территории Украины“</i>, считается украинскими властями территорией, временно
+                оккупированной
+                российскими вооружёнными силами, а структуры ЛНР рассматриваются Украиной как „российская оккупационная
+                администрация“. В свою очередь, в период начала вооружённого конфликта депутаты областного совета
+                Луганской области заявили, что следует уважать волю граждан, которые высказались на референдуме ЛНР,
+                а председатель облсовета охарактеризовал силовую операцию правительства Украины как <i>„террористическую
+                    и
+                    направленную против народа“</i>, Россия же отвергает обвинения в своём участии в вооружённом
+                конфликте в Донбассе в целом и оккупации украинских территорий в частности.
+            </p>
+            <h2>Государственное устройство</h2>
+            <hr>
+            <p>
+                ЛНР — унитарная республика президентского типа (глава государства, избираемый прямым голосованием,
+                является одновременно главой исполнительной власти). Основным законом государства является конституция,
+                принятая 18 мая 2014 года.
+            </p>
+            <p>
+                Основные институты государственности Луганской Народной Республики находятся в процессе формирования.
+            </p>
+            <p>
+                По конституции главой государства и руководителем исполнительной ветви власти является глава Луганской
+                Народной Республики, в настоящее время — Игорь Плотницкий. При этом согласно ч. 1 ст. 75 Конституции
+                ЛНР существует отдельная должность главы исполнительной власти — Председатель Совета Министров,
+                сохранившаяся со времён, когда глава ЛНР ещё не был всенародно избран. Эту должность ранее занимали
+                главы ЛНР Валерий Болотов и Игорь Плотницкий. До 26 декабря 2015 года премьер-министр ЛНР — Геннадий
+                Цыпкалов. 26 декабря 2015 года Народный Совет ЛНР утвердил в должности председателя Совмина
+                генерал-майора Народной милиции ЛНР Сергея Козлова.
+            </p>
+            <p>
+                По основному закону ЛНР — конституции, вторым лицом республики является Председатель Народного Совета
+                ЛНР. Перым спикером парламента первого созыва 18 мая 2014 года избран Алексей Карякин. В ноябре
+                2014 года после проведенных выборов Главы ЛНР и депутатов Народного совета ЛНР, выбран спикером
+                парламента второго созыва. 25 марта 2016 года Народный совет ЛНР освободил Карякина от должности
+                председателя по представлению депутатов. С 1 апреля 2016 года по 21 декабря 2017 года Председателем
+                Народного Совета Луганской Народной Республики избран Владимир Дегтяренко. 21 декабря 2017 года
+                председателем Народного Совета ЛНР был избран Денис Мирошниченко. За него проголосовало 32 из 33
+                присутствующих депутатов (сам Мирошниченко при голосовании воздержался).
+            </p>
+            <p>
+                Глава ЛНР избирается сроком на пять лет тайным голосованием на всеобщих прямых выборах, один и тот же
+                человек не может занимать этот пост более двух сроков подряд. Глава ЛНР назначает Председателя Совета
+                Министров и его заместителей, по представлению Председателя Совета Министров назначает министров и
+                руководителей иных органов исполнительной власти. В правительство входят министры (возглавляют
+                министерства) и главы ведомств, не имеющие министерской должности, но официально приравниваемые к
+                министрам по статусу. Количественный состав и структура правительства не регламентированы законодательно
+                и определяются главой республики.
+            </p>
+            <h3><a href="gos-simvolika">Государственная символика</a></h3>
+            <p>
+                У Луганской Народной Республики есть 3 государственных символа — флаг, герб и гимн.
+            </p>
+            <p>
+                30 октября 2014 года был утверждён герб ЛНР. По своей стилистике герб народной республики напоминает
+                гербы союзных республик СССР, однако без серпа и молота. Венчает конструкцию восьмиконечная звезда,
+                которая у некоторых народов используется как знак возрождения и путеводности, символ славы и света.
+            </p>
+            <p>
+                26 ноября 2014 года был утверждён флаг Луганской Народной Республики. Голубой цвет флага символизирует
+                небесную чистоту и непорочность Богородицы, синий цвет — упорство и постоянство, а красный — могущество
+                и стремление к победе. Два нижних цвета флага (синий и красный) перекликаются с цветами флага РФ.
+            </p>
+            <p>
+                29 апреля 2016 года был утверждён гимн ЛНР. Музыка была сочинена композитором Георгием Галиным. Слова
+                были написаны поэтом Владимиром Михайловым.
             </p>
 
         </div>
