--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -28,6 +28,7 @@
         <br>
         <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
             download><button>Скачать Гимн России</button></a>
+        <a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3"><button>Скачать Гимн ЛНР</button></a>    
         <footer>
             &copy; 2020-2021
             <br>
