--- a/country/index.html
+++ b/country/index.html
@@ -65,7 +65,7 @@
                         <td>СССР</td>
                         <td><img src="/political-na-postsovet-space/gerb-of-USSR.png" alt=""></td>
                         <td><img src="/political-na-postsovet-space/flag-of-USSR.png" alt=""></td>
-                        <td rowspan="2">Москва</td>
+                        <td>Москва</td>
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
@@ -73,13 +73,11 @@
                         <td>Разные даты</td>
 
                     </tr>
-                    <tr>
+                    <tr style="background: rgb(2, 63, 2);">
                         <td><a href="russia/">Российская Федерация</td>
-                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png"
-                                alt=""></td>
-                        <td><img src="russia/gos-simvolika/flag-of-Russia.png"
-                                alt=""></td>
-
+                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png" alt=""></td>
+                        <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt=""></td>
+                        <td>Москва</td>
                         <td>12 декабря 1991</td>
                         <td>17 125 191</td>
                         <td>146 781 095</td>
@@ -87,7 +85,7 @@
                         <td>2019</td>
 
                     </tr>
-                    <tr>
+                    <tr style="background: rgb(2, 63, 2);">
                         <td><a href="ukraine/"> Украина</a></td>
                         <td><img src="ukraine/gerb-of-ukraine.png" alt=""></td>
                         <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
@@ -99,7 +97,7 @@
                         <td>2017</td>
 
                     </tr>
-                    <tr>
+                    <tr style="background: rgb(2, 63, 2);">
                         <td><a href="belarus/">Беларусь</a></td>
                         <td><img src="belarus/gerb-of-Belarus.png" alt=""></td>
                         <td><img src="belarus/flag-of-Belarus.png" alt=""></td>
@@ -110,6 +108,17 @@
                         <td>47,89</td>
                         <td>2018</td>
 
+                    </tr>
+                    <tr style="background: brown;">
+                        <td><a href="dni">ДНР</a></td>
+                        <td><img src="dni/gos-simvolika/gerb-of-Dni.png" width="100px"></td>
+                        <td><img src="dni/gos-simvolika/flag-of-Dni.png" width="100px"></td>
+                        <td>Донецк</td>
+                        <td>7 апреля 2014 (от Украины)</td>
+                        <td>7 853</td>
+                        <td> 2 244 547</td>
+                        <td>285,82</td>
+                        <td>2020</td>
                     </tr>
                     <tr>
                         <td><a href="lnr">ЛНР</a></td>
@@ -177,7 +186,8 @@
                 <small>
                     <p><i>Примечания:</i></p>
                     <ol>
-                        <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и ЛНР).</li>
+                        <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и
+                            ЛНР).</li>
                     </ol>
                 </small>
 
