--- a/country/dni/index.html
+++ b/country/dni/index.html
@@ -105,12 +105,25 @@
                 уклонение от военной службы и дезертирство.
             </p>
             <h3><a href="gos-simvolika">Государственная символика</a></h3>
+            <p>
+                Государственная символика ДНР регламентируется конституцией и действующим законодательством.
+            </p>
+            <p>
+                Флаг ДНР представляет собой прямоугольное полотнище с пропорциями 3:2, разделённое на три горизонтальных
+                полосы равного размера: верхнюю — чёрную, среднюю — синюю и нижнюю — красную. По центру флага, на всех
+                его полосах, располагается герб ДНР: серебряный двуглавый орёл, на груди орла в червлёном щите —
+                Архистратиг Михаил в серебряном вооружении и чёрной приволоке (мантии). Сверху на полотнище размещена
+                надпись «ДОНЕЦКАЯ НАРОДНАЯ», снизу — «РЕСПУБЛИКА». С 27 февраля 2018 флаг ДНР представляет собой
+                чёрно-сине-красный триколор без дополнительных надписей и герба.
+            </p>
 
         </div>
     </main>
     <footer>
-        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
-        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+        
+            <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+            <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+    
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
