--- a/country/index.html
+++ b/country/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="Vladimir.jpg" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Страны | Постсоветское пространоство</title>
@@ -46,13 +46,15 @@
             </p>
             <h2>Список стран Постсоветского пространства<sup><a href="#primechania">1</a></sup></h2>
 
-            <table border="1" rules="all" class="table text-info table-bordered">
+            <table border="1" rules="all" class="table text-info table-bordered" width="100%">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">Страна</th>
                         <th scope="col">Герб</th>
                         <th scope="col">Флаг</th>
                         <th scope="col">Столица</th>
+                        <th scope="col">Глава / Президент</th>
+                        <th scope="col">Фото</th>
                         <th scope="col">Дата независимости / дата распада СССР</th>
                         <th scope="col">Территория (км<sup>2</sup>)</th>
                         <th scope="col">Население</th>
@@ -66,6 +68,8 @@
                         <td><img src="/political-na-postsovet-space/gerb-of-USSR.png" alt=""></td>
                         <td><img src="/political-na-postsovet-space/flag-of-USSR.png" alt=""></td>
                         <td>Москва</td>
+                        <td>Михаил Сергеевич Горбачёв</td>
+                        <td></td>
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
@@ -73,11 +77,13 @@
                         <td>Разные даты</td>
 
                     </tr>
-                    <tr style="background: rgb(2, 63, 2);">
+                    <tr>
                         <td><a href="russia/">Российская Федерация</td>
                         <td><img src="russia/gos-simvolika/gerb-of-Russia.png" alt=""></td>
                         <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt=""></td>
                         <td>Москва</td>
+                        <td>Владимир Владимирович Путин</td>
+                        <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="75%"></td>
                         <td>12 декабря 1991</td>
                         <td>17 125 191</td>
                         <td>146 781 095</td>
@@ -85,11 +91,13 @@
                         <td>2019</td>
 
                     </tr>
-                    <tr style="background: rgb(2, 63, 2);">
+                    <tr>
                         <td><a href="ukraine/"> Украина</a></td>
                         <td><img src="ukraine/gerb-of-ukraine.png" alt=""></td>
                         <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
+                        <td>Владимир Александрович Зеленский</td>
+                        <td><img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt="" width="75%"></td>
                         <td>24 августа 1991</td>
                         <td>603 549</td>
                         <td>42 248 598</td>
@@ -97,11 +105,14 @@
                         <td>2017</td>
 
                     </tr>
-                    <tr style="background: rgb(2, 63, 2);">
+                    <tr>
                         <td><a href="belarus/">Беларусь</a></td>
                         <td><img src="belarus/gerb-of-Belarus.png" alt=""></td>
                         <td><img src="belarus/flag-of-Belarus.png" alt=""></td>
                         <td>Минск</td>
+                        <td>Александр Григорьевич Лукашенко</td>
+                        
+                        <td><img src="belarus/Lukashenko.jpg" alt="" width="75%"></td>
                         <td>25 августа 1991</td>
                         <td>207 600</td>
                         <td>9 475 600</td>
@@ -110,71 +121,34 @@
 
                     </tr>
                     <tr style="background: brown;">
-                        <td><a href="dni">ДНР</a></td>
+                        <td><a href="dni">ДНР</a><sup><a href="#primechania">2</a></sup></td>
                         <td><img src="dni/gos-simvolika/gerb-of-Dni.png" width="100px"></td>
                         <td><img src="dni/gos-simvolika/flag-of-Dni.png" width="100px"></td>
                         <td>Донецк</td>
+                        <td>Денис Владимирович Пушилин</td>
+                        <td></td>
                         <td>7 апреля 2014 (от Украины)</td>
                         <td>7 853</td>
-                        <td> 2 244 547</td>
+                        <td>2 244 547</td>
                         <td>285,82</td>
                         <td>2020</td>
                     </tr>
-                    <tr>
+                    <tr style="background: brown;">
                         <td><a href="lnr">ЛНР</a></td>
                         <td><img src="lnr/gos-simvolika/gerb-of-Lnr.png" width="100px"></td>
                         <td><img src="lnr/gos-simvolika/flag-of-Lnr.png" width="100px"></td>
                         <td>Луганск</td>
+                        <td>Леонид Иванович Пасечник</td>
+                        <td></td>
                         <td>12 мая 2014 (от Украины)</td>
-                        <td>8377</td>
-                        <td>1450000</td>
+                        <td>8 377</td>
+                        <td>1 450 000</td>
                         <td>173,09</td>
                         <td>2020</td>
                     </tr>
 
                 </tbody>
             </table>
-            <br><br>
-            <h2>Главы стран Республики Беларусь, Российской Федерации и Украины</h2>
-
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" class="d-block w-100" alt="..." ">
-                        <div class=" carousel-caption d-none d-md-block">
-                        <h5>Владимир Владимирович Путин</h5>
-                        <p>Президент Российской Федерации</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Владимир Александрович Зеленский</h5>
-                        <p>Президент Украины</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Lukashenko.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Александр Григорьевич Лукашенко</h5>
-                        <p>Президент Республики Беларусь</p>
-                    </div>
-
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Назад</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Дальше</span>
-            </a>
             <br>
             <br>
             <br>
@@ -187,7 +161,9 @@
                     <p><i>Примечания:</i></p>
                     <ol>
                         <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и
-                            ЛНР).</li>
+                            ЛНР).
+                        </li>
+                        <li>Независимость ДНр и ЛНР не признают члены ООН</li>
                     </ol>
                 </small>
 
