--- a/country/index.html
+++ b/country/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Vladimir.jpg" image="/x-icon">
+    <link rel="shortcut icon" href="ussr/gerb-of-USSR.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Страны | Постсоветское пространоство</title>
@@ -63,13 +63,13 @@
                     </tr>
                 </thead>
                 <tbody class="ussr">
-                    <tr>
+                    <tr style="background: rgba(209, 136, 0, 0.726);">
                         <td>СССР</td>
-                        <td><img src="/political-na-postsovet-space/gerb-of-USSR.png" alt=""></td>
-                        <td><img src="/political-na-postsovet-space/flag-of-USSR.png" alt=""></td>
+                        <td><img src="ussr/gerb-of-USSR.png" alt="" width="100px"></td>
+                        <td><img src="ussr/flag-of-USSR.png" alt="" width="100px"></td>
                         <td>Москва</td>
                         <td>Михаил Сергеевич Горбачёв</td>
-                        <td></td>
+                        <td><img src="ussr/Gorbachev_(cropped).png" alt="" width="250px"></td>
                         <td>26 декабря 1991</td>
                         <td>22 402 200</td>
                         <td>292 610 734</td>
@@ -83,7 +83,7 @@
                         <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt=""></td>
                         <td>Москва</td>
                         <td>Владимир Владимирович Путин</td>
-                        <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="75%"></td>
+                        <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px"></td>
                         <td>12 декабря 1991</td>
                         <td>17 125 191</td>
                         <td>146 781 095</td>
@@ -97,7 +97,7 @@
                         <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
                         <td>Киев</td>
                         <td>Владимир Александрович Зеленский</td>
-                        <td><img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt="" width="75%"></td>
+                        <td><img src="800px-Volodymyr_Zelensky_Official_portrait_(cropped).jpg" alt="" width="250px"></td>
                         <td>24 августа 1991</td>
                         <td>603 549</td>
                         <td>42 248 598</td>
@@ -110,9 +110,8 @@
                         <td><img src="belarus/gerb-of-Belarus.png" alt=""></td>
                         <td><img src="belarus/flag-of-Belarus.png" alt=""></td>
                         <td>Минск</td>
-                        <td>Александр Григорьевич Лукашенко</td>
-                        
-                        <td><img src="belarus/Lukashenko.jpg" alt="" width="75%"></td>
+                        <td>Александр Григорьевич Лукашенко</td> 
+                        <td><img src="belarus/Lukashenko.jpg" alt="" width="250px"></td>
                         <td>25 августа 1991</td>
                         <td>207 600</td>
                         <td>9 475 600</td>
@@ -126,7 +125,7 @@
                         <td><img src="dni/gos-simvolika/flag-of-Dni.png" width="100px"></td>
                         <td>Донецк</td>
                         <td>Денис Владимирович Пушилин</td>
-                        <td></td>
+                        <td><img src="dni/glava-of-Dni.jpg" alt="" width="250px"></td>
                         <td>7 апреля 2014 (от Украины)</td>
                         <td>7 853</td>
                         <td>2 244 547</td>
@@ -139,7 +138,7 @@
                         <td><img src="lnr/gos-simvolika/flag-of-Lnr.png" width="100px"></td>
                         <td>Луганск</td>
                         <td>Леонид Иванович Пасечник</td>
-                        <td></td>
+                        <td><img src="lnr/Leonid_Pasechnik_2019.png" alt="" width="250px"></td>
                         <td>12 мая 2014 (от Украины)</td>
                         <td>8 377</td>
                         <td>1 450 000</td>
