--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -18,7 +18,8 @@
         <a href="/political-na-postsovet-space/country/"><button>Страны</button></a>
 
         <br>
-        <a href="/political-na-postsovet-space/country/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать Фото Путина</button></a>
+        <a href="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать Фото Путина</button></a>
+        <a href="/political-na-postsovet-space/ussr/Gorbachev_(cropped).png"><button>Скачать Фото Горбачёва</button></a>
     </header>
     <main>
         <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
